package com.mad.p03.np2020.routine.Class;

class Label{

    private String mName;

    public Label(String name) {

        this.mName = name;
    }

}